--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -41,6 +41,7 @@ header {
 
 	.brand {
 		flex-basis: 100%;
+		padding: 5rem;
 		a {
 			text-decoration: none;
 			border: none;
